--- a/css/certif.css
+++ b/css/certif.css
@@ -71,6 +71,12 @@ img{
     display: none;
 }
 
+footer{
+    position: fixed;
+    width: 100%;
+    bottom: 0;
+}
+
 @media screen and (max-width: 76.8rem) {
     *{
         overflow: visible;
@@ -88,8 +94,8 @@ img{
     }
 
     img{
-        max-width: 10rem;
-        max-height: 10rem;
+        max-width: 8rem;
+        max-height: 8rem;
     }
 
     #secnum{
