--- a/css/xp.css
+++ b/css/xp.css
@@ -119,12 +119,14 @@ path {
     position: absolute;
     top: 1rem;
     right: 1rem;
+    height: 3rem;
+    width: 3rem;
     background-color: var(--bgcolor-list);
     color: var(--bgcolor-header);
     border: none;
     border-radius: 50%;
     cursor: pointer;
-    padding: 5px;
+    padding: 0.5rem;
     font-size: 1.2rem;
 }
 
@@ -147,9 +149,9 @@ path {
 }
 
 
-@media (hover: none) {
-    .point:hover .tooltip{
-        opacity: 0;
-        visibility: hidden;
+@media (hover: none), (pointer: coarse) {
+    .point:hover .tooltip {
+        display: none !important;
     }
 }
+
